--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <a class="navbar-brand " href="#" style="font-family: Outfit, sans-serif; font-weight:600;">
         <div class="me-5 "> <a href="" class="text-decoration-none "
             style="  font-family: Outfit, sans-serif; font-weight:600; font-size: 27px; color:#000000;"><img
-              class="me-3" src="/assets/FUTO_logo 2.png" alt="" style="width: 38px;
+              class="me-3" src="./assets/FUTO_logo 2.png" alt="" style="width: 38px;
           height: 41.04px;">Futo Meet</a> </div>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
@@ -88,7 +88,7 @@
 
       <div class="col-sm-10 mx-0  cardtwo   col-md-4  ">
         <div class="card  " style="width: 280px; ">
-          <img src="/assets/Image.png" class="card-img-top" alt="..." style="width: 280px;">
+          <img src="./assets/Image.png" class="card-img-top" alt="..." style="width: 280px;">
           <div class="card-body">
             <h5 class="card-title"
               style="font-family: Inter, sans-serif; font-size: 20px; font-weight: 400;color: #101828;">
@@ -98,15 +98,15 @@
             <p class="card-text"
               style="font-family: Inter, sans-serif; color: #667085; font-size:16px; font-weight: 400;">Lead
               engineering teams at Figma, Pitch, and Protocol Labs.</p>
-            <a href="#" class="card-link"><img src="/assets/Vector (2).png" alt=""></a>
-            <a href="#" class="card-link"><img src="/assets/Vector (1).png" alt=""></a>
-            <a href="#" class="card-link"><img src="/assets/Vector (3).png" alt=""></a>
+            <a href="#" class="card-link"><img src="./assets/Vector (2).png" alt=""></a>
+            <a href="#" class="card-link"><img src="./assets/Vector (1).png" alt=""></a>
+            <a href="#" class="card-link"><img src="./assets/Vector (3).png" alt=""></a>
           </div>
         </div>
       </div>
       <div class="col-sm-10  cardtwo mx-0  col-md-4 ">
         <div class="card try" style="width: 280px;">
-          <img src="/assets/Image (1).png" class="card-img-top" alt="..." style="width: 280px;">
+          <img src="./assets/Image (1).png" class="card-img-top" alt="..." style="width: 280px;">
           <div class="card-body">
             <h5 class="card-title"
               style="font-family: Inter, sans-serif; font-size: 20px; font-weight: 400; color: #101828;">Phoenix Baker
@@ -116,16 +116,16 @@
             <p class="card-text"
               style="font-family: Inter, sans-serif; color: #667085; font-size:16px; font-weight: 400;">Lead
               engineering teams at Figma, Pitch, and Protocol Labs.</p>
-            <a href="#" class="card-link"><img src="/assets/Vector (2).png" alt=""></a>
-            <a href="#" class="card-link"><img src="/assets/Vector (1).png" alt=""></a>
-            <a href="#" class="card-link"><img src="/assets/Vector (3).png" alt=""></a>
+            <a href="#" class="card-link"><img src="./assets/Vector (2).png" alt=""></a>
+            <a href="#" class="card-link"><img src="./assets/Vector (1).png" alt=""></a>
+            <a href="#" class="card-link"><img src="./assets/Vector (3).png" alt=""></a>
           </div>
         </div>
       </div>
 
       <div class="col-sm-10  cardtwo mx-0  col-md-4 ">
         <div class="card " style="width: 280px;">
-          <img src="/assets/Image (2).png" class="card-img-top" alt="..." style="width: 280px;">
+          <img src="./assets/Image (2).png" class="card-img-top" alt="..." style="width: 280px;">
           <div class="card-body">
             <h5 class="card-title">Phoenix Baker</h5>
             <p class="card-text" style="font-family: Inter, sans-serif; font-size:18px; color: #61876E; ">Engineering
@@ -133,9 +133,9 @@
             <p class="card-text"
               style="font-family: Inter, sans-serif; color: #667085; font-size:16px; font-weight: 400;">Lead
               engineering teams at Figma, Pitch, and Protocol Labs.</p>
-            <a href="#" class="card-link"><img src="/assets/Vector (2).png" alt=""></a>
-            <a href="#" class="card-link"><img src="/assets/Vector (1).png" alt=""></a>
-            <a href="#" class="card-link"><img src="/assets/Vector (3).png" alt=""></a>
+            <a href="#" class="card-link"><img src="./assets/Vector (2).png" alt=""></a>
+            <a href="#" class="card-link"><img src="./assets/Vector (1).png" alt=""></a>
+            <a href="#" class="card-link"><img src="./assets/Vector (3).png" alt=""></a>
           </div>
         </div>
       </div>
@@ -187,7 +187,7 @@
     <div class=" container card text-center w-75    " style="width: rem; background: #F9FAFB;border-radius: 16px;">
 
       <div class="card-body ">
-        <h5 class="card-title"><img class=" p-3 " src="/assets/Group 4 (1).png" alt=""></h5>
+        <h5 class="card-title"><img class=" p-3 " src="./assets/Group 4 (1).png" alt=""></h5>
         <p class="card-text"
           style="color: #101828;line-height: 30px; font-family: Inter, sans-serif; font-weight:500; font-size:20px;">
           Still have a question ?</p>
